# PongQt

./: .gitignore  BallMovement.cpp  BallMovement.h  BallRenderer.cpp  BallRenderer.h  CMakeLists.txt  GameManager.cpp  GameManager.h  GameOverScreen.cpp  GameOverScreen.h  GameStartScreen.cpp  GameStartScreen.h  LineRenderer.cpp  LineRenderer.h  PhysicsManager.cpp  PhysicsManager.h  PlayerItem.cpp  PlayerItem.h  PlayerRenderer.cpp  PlayerRenderer.h  README.md  Renderer.cpp  Renderer.h  RendererFactory.cpp  RendererFactory.h  ScoreManager.cpp  ScoreManager.h  ScoreRenderer.cpp  ScoreRenderer.h  ScreenBase.cpp  ScreenBase.h  button_style.qss  icon.qrc  main.cpp
font/: FontConfig.cpp  FontConfig.h  font.qrc
fonts/: FontConfig.cpp
gameplay/: BallMovement.cpp  BallMovement.h  PlayerItem.h
icon/: icon.qrc
managers/: GameManager.cpp  GameManager.h  ScoreManager.cpp  ScoreManager.h
renderers/: BallRenderer.cpp  BallRenderer.h  IBoundable.cpp  IBoundable.h  LineRenderer.cpp  LineRenderer.h  PlayerRenderer.cpp  PlayerRenderer.h  Renderer.cpp  Renderer.h  RendererFactory.cpp  ScoreRenderer.cpp  ScoreRenderer.h
screens/: GameOverScreen.cpp  GameOverScreen.h  GameStartScreen.cpp  GameStartScreen.h  ScreenBase.cpp  ScreenBase.h
style/: style.qrc
